@@ -290,6 +290,30 @@ def test_quoting():
            'http://de.wikipedia.org/wiki/Elf%20%28Begriffskl%C3%A4rung%29'
 
 
+def test_url_decoding():
+    """Test the URL decoding"""
+    x = url_decode('foo=42&bar=23&uni=H%C3%A4nsel')
+    assert x['foo'] == '42'
+    assert x['bar'] == '23'
+    assert x['uni'] == u'Hänsel'
+
+    x = url_decode('foo=42;bar=23;uni=H%C3%A4nsel', separator=';')
+    assert x['foo'] == '42'
+    assert x['bar'] == '23'
+    assert x['uni'] == u'Hänsel'
+
+    x = url_decode('%C3%9Ch=H%C3%A4nsel', decode_keys=True)
+    assert x[u'Üh'] == u'Hänsel'
+
+
+def test_url_encoding():
+    """Test the URL decoding"""
+    assert url_encode({'foo': 'bar 45'}) == 'foo=bar+45'
+    d = {'foo': 1, 'bar': 23, 'blah': u'Hänsel'}
+    assert url_encode(d, sort=True) == 'bar=23&blah=H%C3%A4nsel&foo=1'
+    assert url_encode(d, sort=True, separator=';') == 'bar=23;blah=H%C3%A4nsel;foo=1'
+
+
 def test_sorted_url_encode():
     """Optional sorted URL encoding"""
     assert url_encode({"a": 42, "b": 23, 1: 1, 2: 2}, sort=True) == '1=1&2=2&a=42&b=23'
